--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "coverge": "react-scripts test '--watchAll=false' '--coverage'"
+    "coverage": "react-scripts test '--watchAll=false' '--coverage'"
   },
   "eslintConfig": {
     "extends": [
